--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
+    "react-tsparticles": "^1.18.11",
+    "react-typical": "^0.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -39,6 +43,7 @@
     "@craco/craco": "^6.0.0",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.1.0",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   }
